--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(192,192,192,0.3);
+  top:0;
 }
 
 #displayPizza {
@@ -14,4 +15,51 @@
   height: 40vw;
   border: solid;
   background-color: white;
+}
+
+
+.formWrapper {
+  border:solid;
+  text-align: center;
+}
+
+.toppingImg {
+  width: 50px;
+  height: 50px;
+}
+
+.toppingField {
+  border:solid;
+}
+
+input[type="text"] {
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+}
+
+input[type="radio"] {
+  visibility: hidden;
+  display: block;
+}
+
+input[type="radio"]:checked + img {
+  border:solid;
+}
+
+.toppingRadio {
+  display:inline-block;
+  border:solid;
+}
+
+.toppingsContainer, .sizeContainer {
+  border:solid;
+  display: inline-block;
+  text-align: center;
+}
+
+
+.toppingsContainer {
+  position:relative;
+  top: -200px;
 }
