--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(192,192,192,0.3);
+  background-color: rgba(192,192,192,0.5);
   top:0;
 }
 
 #displayPizza {
+  text-align: center;
   position:absolute;
   top: 10%;
   left: 30%;
@@ -15,17 +16,47 @@
   height: 40vw;
   border: solid;
   background-color: white;
+  font-size: 2em;
+  font-family: monospace;
+  padding: 20px;
+
+}
+
+h1, h2 {
+  background-color: rgba(205, 176, 0, 0.5);
+  width: 70vw;
+  margin: auto;
+}
+
+body{
+  text-align:center;
+  background-image: url('https://img.buzzfeed.com/buzzfeed-static/static/2014-06/19/19/enhanced/webdr02/anigif_enhanced-7510-1403220931-1.gif');
+  background-size: cover;
+}
+
+p {
+  margin-top: 100px;
 }
 
 
 .formWrapper {
-  border:solid;
   text-align: center;
+  background-color: rgba(169,169,169,0.5);
+  margin:auto;
+  width:70vw;
 }
 
 .toppingImg {
   width: 50px;
   height: 50px;
+
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  background-color: black;
+  border-radius: 100%;
 }
 
 .toppingField {
@@ -33,9 +64,18 @@
 }
 
 input[type="text"] {
+  width: 70%;
+  height: 25px;
   display: block;
   margin: auto;
   margin-top: 50px;
+  border-radius: 50px;
+  /*border-bottom: solid;*/
+  padding: 0 5px 0 5px;
+}
+
+input[type="text"]:focus {
+  outline: none;
 }
 
 input[type="radio"] {
@@ -43,9 +83,15 @@ input[type="radio"] {
   display: block;
 }
 
+
+
 input[type="radio"]:checked + img {
-  border:solid;
+
+  border-radius: 100%;
+  box-shadow: 2px 2px 20px red;
 }
+
+
 
 .toppingRadio {
   display:inline-block;
@@ -53,13 +99,46 @@ input[type="radio"]:checked + img {
 }
 
 .toppingsContainer, .sizeContainer {
-  border:solid;
+  /*border:solid;*/
   display: inline-block;
   text-align: center;
 }
 
+.inches {
+ float: left;
+ clear: both;
+}
 
 .toppingsContainer {
   position:relative;
-  top: -200px;
+  top: -350px;
+}
+@media screen and (max-width:860px) {
+  .toppingsContainer {
+    position: static;
+    display: block;
+  }
+  button {
+    border: solid;
+    border-radius: 30px;
+    width: 12vw;
+    height: 5vw;
+    position s;
+    bottom: 0px;
+  }
+}
+
+button {
+  border: solid;
+  border-radius: 30px;
+  width: 12vw;
+  height: 5vw;
+  position: static;
+  display: block;
+  margin:auto;
+  margin-top: 50px;
+}
+
+button:focus {
+  outline: none;
 }
